# AzureEventGrid_MQTT_RaspberryPi_Paho_C

./: .gitignore  CMakeLists.txt  CMakePresets.json  cgmanifest.json
docs/: README (copy 1).md  README.md  Setup.md
mqttclients/c/mosquitto_client_extensions/: mqtt_setup.h
sensors_dtoverlay/: bme280.h
sensors_file/: bme280.cpp  bme280.h
src/: CMakeLists.txt
src/raspberry_pi_client/: main.cpp
